# MemoryPressureService

./: Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
.github/extensions/commit-and-push/: extension.mjs
.github/workflows/: ci.yml  release.yml
docs/: github-actions.md
src/: cli.rs  config.rs  display.rs  error.rs  html.rs  main.rs  monitor.rs  ntapi.rs  privilege.rs  purge.rs  settings_html.rs  stats.rs  statswindow.rs  toast.rs  tray.rs
ui/: package-lock.json  package.json  settings.html  stats.html  tsconfig.json  vite.config.ts
ui/src/settings/: App.css  App.tsx  main.tsx
ui/src/shared/: Button.css  Button.tsx  Card.css  Card.tsx  index.ts  theme.css  types.ts
ui/src/stats/: App.css  App.tsx  MemoryGauge.css  MemoryGauge.tsx  OverviewTable.css  OverviewTable.tsx  PageListTable.css  PageListTable.tsx  StandbyGrid.css  StandbyGrid.tsx  format.ts
