[package]
name = "mpa"
version = "0.1.0"
edition = "2024"
description = "Windows Memory Pressure Agent - monitor and manage physical memory"

[dependencies]
clap = { version = "4", features = ["derive"] }
comfy-table = "=7.1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
